Closed Bug 546296 Opened 15 years ago Closed 15 years ago

Misalignment in --help command line

Categories

(MailNews Core :: Backend, defect)

defect
Not set
trivial

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.1b1

People

(Reporter: glandium, Assigned: glandium)

References

Details

Attachments

(1 file)

--help output was realigned in bug 458631. Consequently, command line help info from the suite need to be updated accordingly. The patch I'm attaching is against comm-1.9.1 but I guess it applies cleanly on comm-central.
Attachment #426984 - Attachment is patch: true
Attachment #426984 - Attachment mime type: application/octet-stream → text/plain
Attachment #426984 - Flags: review?(kairo)
Moving to mailnews core. Neil can review the SeaMonkey and editor parts. Mailnews peers are listed here: <https://developer.mozilla.org/en/Mailnews_and_Mail_code_review_requirements#Mailnews_individuals_and_roles> So I guess Neil can review the mailnews parts as well.
Assignee: nobody → mh+mozilla
Component: General → Backend
Product: SeaMonkey → MailNews Core
QA Contact: general → backend
Comment on attachment 426984 [details] [diff] [review] Patch [Checkin: Comment 4] Sorry, while I can review build system stuff, this is not my area, forwarding to Neil.
Attachment #426984 - Flags: review?(kairo) → review?(neil)
Attachment #426984 - Flags: review?(neil) → review+
Comment on attachment 426984 [details] [diff] [review] Patch [Checkin: Comment 4] Mike, if you need someone to check this in, please either add checkin-needed to the bug, or just say so in the comments here. (I'm not sure if you have checkin privs)
Status: NEW → ASSIGNED
Keywords: checkin-needed
Attachment #426984 - Attachment description: Patch → Patch [Checkin: Comment 4]
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite-
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.1b1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: