Bug 546296 - Misalignment in --help command line. r=neil.