mailnews/news/src/nsNntpService.cpp
@@ -1742,7 +1742,7 @@ nsNntpService::Handle(nsICommandLine* aCmdLine)
 NS_IMETHODIMP
 nsNntpService::GetHelpInfo(nsACString& aResult)
 {
-  aResult.Assign(NS_LITERAL_CSTRING("  -news                Open the news client.\n"));
+  aResult.Assign(NS_LITERAL_CSTRING("  -news              Open the news client.\n"));
   return NS_OK;
 }
 
